# pyterrier-anserini

./: MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: style.yml  test.yml
extras/: docs_index_to_readme.py
pyterrier_anserini/: __init__.py  _index.py  _indexer.py  _java.py  _legacy.py  _reranker.py  _retriever.py  _similarity.py  _text_loader.py  _tokenizer.py  _util.py  _wmodel.py  java.py  retriever.py
pyterrier_anserini/pt_docs/: api.rst  extras.rst  index.rst  indexing.rst  reranking.rst  retrieval.rst
tests/: test_anserini_retriever.py  test_index.py  test_indexer.py  test_retriever.py
tests/fixtures/: vaswani.tar.lz4  vaswani.tar.lz4.json
